fixed spacing v2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1137,7 +1137,33 @@ margin-right: 1.6rem;
       min-height: 60vh;
       background-attachment: initial;
     }
+    .footer-section2{
+      flex-direction: column;
+      align-items: center;
+    }
+    .newsletter{
+      margin-top: 4rem;
+      margin-left: -2rem;
+    }
 }
+
+
+@media only screen and (max-width: 1000px) {
+  .footer-section{
+    flex-direction: column;
+   }
+  .footer-section2{
+    flex-direction: column;
+  }
+  .footer-section2{
+    text-align: center;
+    align-items: initial;
+  }
+  .newsletter{
+    margin-top: 4rem;
+  }
+  
+  }
 
 
 
@@ -1249,8 +1275,14 @@ margin-right: 1.6rem;
   .how-subtitle{
     text-align: center;
   }
+  .footer-section{
+    flex-direction: column;
+   }
   .footer-section2{
     flex-direction: column;
+  }
+  .footer-section2{
+    text-align: center;
   }
 
 }
@@ -1291,7 +1323,7 @@ margin-right: 1.6rem;
    }
 
    .newsletter{
-   margin-top: 2rem;
+   margin-top: 4rem;
    margin-left: -2rem;
   }
    .footer-section2{
